// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateUser /> should render 1`] = `
<Modal
  label="Create User"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Create User
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <Checkbox
        checked={false}
        disabled={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<CreateUser /> should render when name has changed 1`] = `
<Modal
  label="Create User"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Create User
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value=""
        />
        <Input__InputError>
          Error
        </Input__InputError>
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <Checkbox
        checked={false}
        disabled={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<CreateUser /> should render when name has changed 2`] = `
<Modal
  label="Create User"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Create User
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value="bob"
        />
        <Input__InputError>
          Error
        </Input__InputError>
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <Checkbox
        checked={false}
        disabled={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<CreateUser /> should render when password has changed 1`] = `
<Modal
  label="Create User"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Create User
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value=""
        />
        <Input__InputError>
          Error
        </Input__InputError>
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <Checkbox
        checked={false}
        disabled={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<CreateUser /> should render when password has changed 2`] = `
<Modal
  label="Create User"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Create User
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value=""
        />
        <Input__InputError>
          Error
        </Input__InputError>
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value="password"
        />
        <Input__InputError />
      </InputGroup>
      <Checkbox
        checked={false}
        disabled={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;

exports[`<CreateUser /> should render with error 1`] = `
<Modal
  label="Create User"
  onExited={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Create User
  </ModalHeader>
  <form
    onSubmit={[Function]}
  >
    <Modal__ModalBody>
      <InputGroup>
        <Input__InputLabel>
          Username
        </Input__InputLabel>
        <Input
          name="userId"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </InputGroup>
      <InputGroup>
        <Input__InputLabel>
          Password
        </Input__InputLabel>
        <PasswordInput
          name="password"
          onChange={[Function]}
          value=""
        />
        <Input__InputError>
          Password too short
        </Input__InputError>
      </InputGroup>
      <Checkbox
        checked={false}
        disabled={false}
        label="Force user to reset password on login"
        onClick={[Function]}
      />
    </Modal__ModalBody>
    <Modal__ModalFooter>
      <SaveButton />
    </Modal__ModalFooter>
  </form>
</Modal>
`;
